--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,39 +1,104 @@
 @import url("https://fonts.googleapis.com/css?family=Sen&display=swap");
+@import "../styles/var.scss";
 
 .header {
-    margin: 1rem 0;
-}
-
-.title {
+  width: 100%;
+  height: 10vh;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   font-family: "Sen", sans-serif;
-  color: #333;
-  font-size: 3rem;
-  text-decoration: none;
 
-
-  &:hover {
-    color: #f5c8d8;
+  ul,
+  li,
+  h1 {
+    margin: 0;
   }
 }
 
+// @@@@ LOGO @@@@
+.title {
+  display: flex;
+
+  a {
+    font-family: "Sen", sans-serif;
+    color: var(--pink);
+    font-size: 2rem;
+    font-weight: 700;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: #fff;
+  }
+}
+
+// @@@@ NAV @@@@
 .nav-list {
-    display: flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  justify-content: center;
 }
 
 .nav-item {
-    color: #999;
-    font-size: .9rem;
-    margin-right: 1.3rem;
-    text-decoration: none;
+  position: relative;
+  color: var(--secondary-white);
+  font-size: 0.9rem;
+  margin: 0;
+  padding: 0 1rem;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.2rem;
 
-    &:hover {
-        color: #666;
-    }
+  &:hover {
+    color: #fff;
+  }
 }
 
 .active-nav-item {
-    color: #222;
+  color: #fff;
+}
+
+.active-nav-item::before {
+  content: '';
+  z-index: -1;
+  position: absolute;
+  top: 10%;
+  bottom: 5%;
+  left: 0;
+  right: 0;
+  background-color: #ff7272;
+  transform: skew(25deg);
+}
+
+// @@@@ MEDIA @@@@
+
+.media {
+  display: flex;
+  justify-content: end;
+
+  ul {
+    display: flex;
+  }
+  li {
+    list-style-type: none;
+    margin: 0.5rem;
+  }
+
+  a {
+    color: #ff7272;
+  }
+
+  .icon {
+    opacity: 0.5;
+    transition: transform, opacity 0.3s ease;
+  }
+
+  .icon:hover {
+    transform: rotateX(180deg);
+    opacity: 1;
+  }
 }
