--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,4 +1,3 @@
-
 .container {
   margin: 0 auto;
   padding: 0;
@@ -8,8 +7,9 @@
   flex-direction: column;
 }
 
-
 .content {
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  margin-top: 5%;
+  flex-grow: 1;
 }
-
