--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -2,6 +2,7 @@
 @import "../styles/var.scss";
 
 .header {
+  position: relative;
   width: 100%;
   height: 10vh;
   background-color: transparent;
@@ -20,11 +21,12 @@
 // @@@@ LOGO @@@@
 .title {
   display: flex;
+  align-content: center;
 
   a {
     font-family: "Sen", sans-serif;
     color: var(--pink);
-    font-size: 2rem;
+    font-size: 2em;
     font-weight: 700;
     text-decoration: none;
   }
@@ -35,23 +37,32 @@
 }
 
 // @@@@ NAV @@@@
+
 .nav-list {
+  // flex-direction: column;
+  // align-content: center;
+  // align-items: center;
+
+  
   display: flex;
   list-style-type: none;
   margin: 0;
   padding: 0;
   justify-content: center;
+
+  @media(max-width: 900px) {
+    display: none;
+  }
 }
 
 .nav-item {
   position: relative;
   color: var(--secondary-white);
-  font-size: 0.9rem;
   margin: 0;
   padding: 0 1rem;
   text-decoration: none;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1.2em;
 
   &:hover {
     color: #fff;
@@ -63,7 +74,7 @@
 }
 
 .active-nav-item::before {
-  content: '';
+  content: "";
   z-index: -1;
   position: absolute;
   top: 10%;
@@ -79,6 +90,10 @@
 .media {
   display: flex;
   justify-content: end;
+
+  @media(max-width: 1100px) {
+    display: none;
+  }
 
   ul {
     display: flex;
@@ -101,4 +116,25 @@
     transform: rotateX(180deg);
     opacity: 1;
   }
+}
+
+// Mobile NAV
+.burger {
+  display: none;
+  cursor: pointer;
+  color: var(--pink);
+  font-size: 2em;
+  opacity: 0.5;
+  transition: all 0.1s ease-in;
+
+  &:hover {
+    transform: rotate(180deg);
+    opacity: 1;
+  }
+
+  @media(max-width: 900px) {
+    display: block;
+
+  }
+  
 }
