--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -5,6 +5,10 @@
   align-items: center;
   width: 100%;
 
+  @media (max-width: 800px) {
+    margin-top: 10%;
+  }
+
   li {
     list-style-type: none;
   }
@@ -13,16 +17,37 @@
 .inner-grid {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
+
+  @media (max-width: 1200px) {
+    grid-template-columns: 1fr;
+  }
 
   ul {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 5rem 3rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-self: start;
+    align-self: start;
+
+    margin: 20%  25%;
+
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(4, 1fr);
+      padding: 0;
+      margin: 2rem auto;
+      grid-gap: 2rem;
+      justify-self: normal;
+    }
+
+    @media (max-width: 600px) {
+      grid-template-columns: repeat(2, 1fr);
+
+    }
 
     li {
       margin: 0.5rem 0;
+
+  
 
       a {
         text-decoration: none;
@@ -34,6 +59,15 @@
       a:hover {
         transform: scale(1.02);
        padding-left: 1.5rem;
+
+       @media (max-width: 1200px) {
+        transform: scale(1);
+        padding-left: 0rem;
+        color: #fff;
+        
+  
+  
+      }
       }
 
       svg {
@@ -58,6 +92,7 @@
   margin: 0 auto;
   padding: 0;
   width: fit-content;
+  font-size: 2.35em;
 }
 
 .titles {
