--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,21 +1,37 @@
 @import "../styles/var.scss";
 
 .home {
-  margin-left: -1rem;
+  margin-left: -1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   opacity: 0;
 
   h1 {
-    font-size: 3rem;
+    font-size: 3em;
     color: #ff7272;
 
-    span {
+    @media (max-width: 985px) {
+      .linebreak::after {
+        content: "\A";
+        white-space: pre;
+      }
+    }
+
+    @media (max-width: 800px) {
+      font-size: 2.5em;
+      margin: 1rem 0 2rem ;
+    }
+
+    @media (max-width: 500px) {
+      font-size: 1.75em;
+      text-align: center;
+    }
+    .headAccent {
       position: relative;
     }
 
-    span::before {
+    .headAccent::before {
       content: "";
       z-index: -1;
       position: absolute;
@@ -29,7 +45,16 @@
 
   h2 {
     color: lighten($color: #222222, $amount: 80);
-    font-size: 9rem;
+    font-size: 9em;
+
+    @media (max-width: 650px) {
+      margin-top: 10%;
+      font-size: 5em;
+    }
+
+    @media (max-width: 500px) {
+      text-align: center;
+    }
   }
 }
 
@@ -41,9 +66,15 @@
   flex-direction: column;
   text-align: justify;
   width: 80%;
-  font-size: 1.1rem;
+  font-size: 1.1em;
   line-height: 1.5;
   height: 100%;
   transform-origin: top;
   color: var(--primary-white);
+
+  @media (max-width: 800px) {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+  }
 }
