--- a/src/pages/portfolio.module.scss
+++ b/src/pages/portfolio.module.scss
@@ -1,12 +1,21 @@
 @import "../styles/var.scss";
 
+.portfolio {
+  @media (max-width: 800px) {
+    margin-top: 10%;
+  }
+}
+
 .title {
   position: relative;
   font-family: var(--primary-font);
   color: #fff;
   text-align: center;
-  margin: 0.5rem auto;
+  margin: 0.5em auto;
   width: fit-content;
+  font-size: 2.35em;
+
+
 }
 
 .title::before {
@@ -21,14 +30,22 @@
 }
 
 .cards {
+  margin: 0;
   margin-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
   grid-gap: 1rem;
   justify-content: center;
 
+  @media (max-width: 600px) {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    grid-gap: 2rem;
+
+  }
+
   li {
     list-style-type: none;
+    margin-block-end: 0;
     width: 100%;
   }
 }
@@ -45,16 +62,12 @@
     animation: rotate3d 0.5s forwards;
   }
 
-
   img {
     border-radius: 0.2rem;
     z-index: 9;
     margin: 0;
   }
-
 }
-
-
 
 @keyframes rotate3d {
   0% {
@@ -68,7 +81,6 @@
     transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(1.01);
   }
 }
-
 
 .tags {
   position: absolute;
@@ -86,6 +98,5 @@
   border-radius: 0.25rem;
   font-size: 0.7rem;
   font-weight: bold;
-  box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.15);
-
+  box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.15);
 }
