--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,12 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 18px;
+
+@media(max-width: 1200px) {font-size: 16px;}
+@media(max-width: 550px) {font-size: 14px;}
+
+
 }
 @keyframes scroll{
   100%{
