--- a/src/templates/blog.module.scss
+++ b/src/templates/blog.module.scss
@@ -1,14 +1,22 @@
 .grid {
   color: #fff;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
+
+  @media (max-width: 1300px) {
+    grid-template-columns: 1fr;
+  }
+
+  @media (max-width: 800px) {
+    margin-top: 10%;
+  }
 }
 
 .description {
   margin-top: -8px;
   color: var(--primary-white);
-  font-size: 0.9rem;
+  font-size: 0.9em;
   text-align: justify;
 }
 
@@ -78,6 +86,10 @@
   justify-content: flex-end;
   margin: 3rem 0 0;
   cursor: pointer;
+
+  @media(max-width: 600px) {
+    justify-content: center;
+  }
 
   li {
     background-color: transparent;
