--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -11,6 +11,10 @@
   justify-content: space-between;
   font-family: "Sen", sans-serif;
 
+  @media (max-width: 900) {
+    // justify-content: unset;
+  }
+
   ul,
   li,
   h1 {
@@ -20,6 +24,7 @@
 
 // @@@@ LOGO @@@@
 .title {
+  position: initial;
   display: flex;
   align-content: center;
 
@@ -29,6 +34,10 @@
     font-size: 2em;
     font-weight: 700;
     text-decoration: none;
+
+    @media (max-width: 900) {
+      padding-top: 1.1em !important;
+    }
   }
 
   a:hover {
@@ -43,14 +52,13 @@
   // align-content: center;
   // align-items: center;
 
-  
   display: flex;
   list-style-type: none;
   margin: 0;
   padding: 0;
   justify-content: center;
 
-  @media(max-width: 900px) {
+  @media (max-width: 900px) {
     display: none;
   }
 }
@@ -91,7 +99,7 @@
   display: flex;
   justify-content: end;
 
-  @media(max-width: 1100px) {
+  @media (max-width: 1100px) {
     display: none;
   }
 
@@ -117,5 +125,3 @@
     opacity: 1;
   }
 }
-
-
