fixed mobil nav burger

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -34,10 +34,6 @@
     font-size: 2em;
     font-weight: 700;
     text-decoration: none;
-
-    @media (max-width: 900) {
-      padding-top: 1.1em !important;
-    }
   }
 
   a:hover {
@@ -123,5 +119,24 @@
   .icon:hover {
     transform: rotateX(180deg);
     opacity: 1;
+  }
+}
+
+// Mobile NAV
+.burger-icon {
+  display: none;
+  cursor: pointer;
+  color: var(--pink);
+  font-size: 2em;
+  opacity: 0.5;
+  transition: all 0.1s ease-in;
+
+  &:hover {
+    transform: rotate(180deg);
+    opacity: 1;
+  }
+
+  @media (max-width: 900px) {
+    display: block;
   }
 }
