--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -7,6 +7,8 @@
   justify-content: center;
   opacity: 0;
 
+
+
   h1 {
     font-size: 3em;
     color: #ff7272;
@@ -20,11 +22,11 @@
 
     @media (max-width: 800px) {
       font-size: 2.5em;
-      margin: 1rem 0 2rem ;
+      margin: 0 0 1em ;
     }
 
     @media (max-width: 500px) {
-      font-size: 1.75em;
+      font-size: 2.2em;
       text-align: center;
     }
     .headAccent {
@@ -48,8 +50,7 @@
     font-size: 9em;
 
     @media (max-width: 650px) {
-      margin-top: 10%;
-      font-size: 5em;
+      font-size: 6em;
     }
 
     @media (max-width: 500px) {
@@ -76,5 +77,6 @@
     margin: 0;
     padding: 0;
     width: 100%;
+    font-size: 1.2em;
   }
 }
