--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -57,6 +57,8 @@
       text-align: center;
     }
   }
+
+
 }
 
 .info {
@@ -79,4 +81,12 @@
     width: 100%;
     font-size: 1.2em;
   }
+
+  a {
+    color: var(--pink);
+    text-decoration: none;
+    font-weight: bold;
+  }
+
+
 }
