--- a/src/pages/contact.module.scss
+++ b/src/pages/contact.module.scss
@@ -123,7 +123,7 @@ form {
     padding: 1rem;
     border-radius: 0.25rem;
     background-color: rgba($color: #000000, $alpha: 0.5);
-    color: var(--pink);
+    color: #fff;
   }
 
   textarea {
